[IMP] Segmentation Channel Sales

--- a/pms/views/pms_folio_views.xml
+++ b/pms/views/pms_folio_views.xml
@@ -135,6 +135,7 @@
                                 sum="Total amount"
                                 widget='monetary'
                             />
+                            <field name="commission" widget='monetary' />
                         </group>
                         <div class="oe_clear" />
                     </group>
