--- a/pms/views/pms_property_views.xml
+++ b/pms/views/pms_property_views.xml
@@ -21,10 +21,10 @@
                             <group
                                 colspan="4"
                                 col="4"
-                                string="Price and Restriction Plans"
+                                string="Price and Availability Plans"
                             >
                                 <field name="default_pricelist_id" required="True" />
-                                <field name="default_restriction_id" required="True" />
+                                <field name="default_availability_id" required="True" />
                             </group>
                             <group string="Timezone">
                                 <field name="tz" widget="timezone_mismatch" />
