[FIX] pms: fix labels ubications menu & cancelation rule tree (#25)

--- a/pms/views/pms_floor_views.xml
+++ b/pms/views/pms_floor_views.xml
@@ -35,7 +35,7 @@
         <field name="view_mode">tree,form</field>
     </record>
     <menuitem
-        name="Ubitacions"
+        name="Ubications"
         id="menu_open_pms_floor_form_tree"
         action="open_pms_floor_form_tree"
         sequence="21"
