[ADD] pms: wizard massive changes on availability plans and pricelists (#28)
* [IMP] pms: wizard massive changes on availability plans

* [TEST] add creation rule based on weeek days

* [REF] pms: model av. plan, rule_ids & inv. name

* [IMP] pms: wizard called from pricelist & availability plans consistently

* [IMP] pms: wizard massive changes on pricelists

* [FIX] pms: fix creation pricelist items

* [FIX] pms: fix timezone on create pricelist items

* [TEST] pms: fix time zone issues in testing

--- a/pms/views/pms_property_views.xml
+++ b/pms/views/pms_property_views.xml
@@ -24,7 +24,10 @@
                                 string="Price and Availability Plans"
                             >
                                 <field name="default_pricelist_id" required="True" />
-                                <field name="default_availability_id" required="True" />
+                                <field
+                                    name="default_availability_plan_id"
+                                    required="True"
+                                />
                             </group>
                             <group string="Timezone">
                                 <field name="tz" widget="timezone_mismatch" />
