--- a/pms/views/pms_room_type_availability_plan_views.xml
+++ b/pms/views/pms_room_type_availability_plan_views.xml
@@ -1,12 +1,24 @@
 <?xml version="1.0" ?>
 <odoo>
     <record id="room_type_availability_view_form" model="ir.ui.view">
-        <field name="name">pms.room.type.availability.form</field>
-        <field name="model">pms.room.type.availability</field>
+        <field name="name">pms.room.type.availability.plan.form</field>
+        <field name="model">pms.room.type.availability.plan</field>
         <field name="arch" type="xml">
             <form string="Rules">
                 <sheet>
-                    <div class="oe_button_box" name="button_box">
+                    <div class="oe_button_box " name="button_box">
+                        <button
+                            name="open_massive_changes_wizard"
+                            type="object"
+                            class="oe_stat_button mr-5"
+                            icon="fa-magic"
+                        >
+                            <label
+                                for="open_massive_changes_wizard"
+                                string="Massive changes"
+                            />
+                        </button>
+
                         <button
                             name="toggle_active"
                             type="object"
@@ -21,10 +33,12 @@
                         </button>
                     </div>
                     <div class="oe_title">
-                        <label for="name" string="Name" />
-                        <h1>
-                            <field name="name" />
-                        </h1>
+                        <group>
+                            <label for="name" string="Name" />
+                            <h1>
+                                <field name="name" />
+                            </h1>
+                        </group>
                     </div>
                     <group>
                         <field
@@ -38,19 +52,15 @@
                         />
                     </group>
                     <separator string="Availability Rules" />
-                    <field name="item_ids" nolabel="1">
-                        <tree string="Availability Rules">
-                            <field name="room_type_id" />
-                            <field name="date" />
-                        </tree>
-                    </field>
+                    <field name="rule_ids" nolabel="1" />
                 </sheet>
             </form>
         </field>
     </record>
     <record id="room_type_availability_view_tree" model="ir.ui.view">
-        <field name="name">pms.room.type.availability.tree</field>
-        <field name="model">pms.room.type.availability</field>
+        <field name="name">pms.room.type.availability.plan.tree</field>
+        <field name="model">pms.room.type.availability.plan</field>
+
         <field name="arch" type="xml">
             <tree string="Availability Plans">
                 <field name="name" />
@@ -67,7 +77,7 @@
     <!-- Action of reservation availability plan-->
     <record model="ir.actions.act_window" id="room_type_availability_action">
         <field name="name">Reservation Availability Plans</field>
-        <field name="res_model">pms.room.type.availability</field>
+        <field name="res_model">pms.room.type.availability.plan</field>
         <field name="view_mode">tree,form</field>
     </record>
     <!-- MENUS -->
