[WIP] Folio Group Management (#31)
* [WIP] Folio Checkins

* [WIP] Process Partner checkin Import

* [WIP] Process Partner checkin Import

* [IMP] key fields to partner creation

* [IMP] Views

* [IMP] Folio Views

--- a/pms/views/pms_checkin_partner_views.xml
+++ b/pms/views/pms_checkin_partner_views.xml
@@ -30,6 +30,7 @@
                                 required="True"
                                 domain="[('is_company','=', False)]"
                             />
+                            <field name="name" />
                             <field name="pms_property_id" invisible="1" />
                             <field name="arrival" />
                             <field name="departure" />
@@ -65,7 +66,8 @@
                     attrs="{'invisible': [('state','!=','precheckin')]}"
                 />
                 <field name="identifier" />
-                <field name="partner_id" required="True" />
+                <field name="partner_id" />
+                <field name="name" />
                 <field name="mobile" />
                 <field name="email" />
                 <field name="arrival" />
@@ -73,6 +75,40 @@
                 <field name="reservation_id" invisible="1" />
                 <field name="folio_id" force_save="1" invisible="1" />
                 <field name="state" invisible="0" />
+            </tree>
+        </field>
+    </record>
+
+    <record id="pms_checkin_partner_folio_view_tree" model="ir.ui.view">
+        <field name="name">pms.checkin.partner.folio.view.tree</field>
+        <field name="model">pms.checkin.partner</field>
+        <field name="priority">20</field>
+        <field name="arch" type="xml">
+            <tree
+                editable="bottom"
+                create="false"
+                decoration-danger="state == 'draft'"
+                decoration-info="state == 'done'"
+                decoration-muted="state == 'cancelled'"
+                decoration-success="state == 'onboard'"
+            >
+                <button
+                    type="object"
+                    class="oe_read_only oe_stat_button"
+                    icon="fa-2x fa-check-circle"
+                    name="action_on_board"
+                    help="Get in"
+                    attrs="{'invisible': [('state','!=','precheckin')]}"
+                />
+                <field name="reservation_id" />
+                <field name="partner_id" domain="[('is_company','=', False)]" />
+                <field name="name" />
+                <field name="mobile" />
+                <field name="email" />
+                <field name="arrival" invisible="1" />
+                <field name="departure" invisible="1" />
+                <field name="folio_id" force_save="1" invisible="1" />
+                <field name="state" />
             </tree>
         </field>
     </record>
@@ -97,11 +133,8 @@
                     help="Get in"
                 />
                 <field name="identifier" />
-                <field
-                    name="partner_id"
-                    required="True"
-                    domain="[('is_company','=', False)]"
-                />
+                <field name="partner_id" domain="[('is_company','=', False)]" />
+                <field name="name" />
                 <field name="mobile" />
                 <field name="email" />
                 <field name="arrival" />
@@ -336,6 +369,100 @@
                         select="multi"
                     />
                 </searchpanel>
+            </search>
+        </field>
+    </record>
+
+    <record model="ir.ui.view" id="pms_checkin_partner_view_folio_search">
+        <field name="name">pms.checkin.partner.search</field>
+        <field name="model">pms.checkin.partner</field>
+        <field name="arch" type="xml">
+            <search string="Checkin Detail">
+                <field name="partner_id" />
+                <field name="reservation_id" />
+                <filter
+                    string="On Board"
+                    name="on_board"
+                    domain="[('state','=','onboard')]"
+                    help="Current Booking"
+                />
+                <filter
+                    string="To enter"
+                    name="to_enter"
+                    domain="[('state', '=', 'draft')]"
+                />
+                <filter string="Out" name="out" domain="[('state', '=', 'done')]" />
+                <filter
+                    string="Checkins Tomorrow"
+                    name="enter_tomorrow"
+                    domain="[('arrival', '=', (context_today()+datetime.timedelta(days=1)).strftime('%Y-%m-%d')),
+                        ('state', '=', 'confirm')]"
+                    help="Show all checkins for enter tomorrow"
+                />
+                <filter
+                    string="Checkins to 7 days"
+                    name="next_res_week"
+                    domain="[('arrival', '&lt;', (context_today()+datetime.timedelta(days=7)).strftime('%Y-%m-%d')),
+                        ('state', '=', 'confirm')]"
+                    help="Show all reservations for which date enter is before than 7 days"
+                />
+                <filter
+                    string="On Board Tomorrow"
+                    name="next_res_2week"
+                    domain="[('arrival', '&lt;', (context_today()+datetime.timedelta(days=14)).strftime('%Y-%m-%d')),
+                        ('state', 'in', ['confirm','onboard'])]"
+                    help="Show all checkins for Tomorrow"
+                />
+                <group expand="0" string="Group By">
+                    <filter
+                        string="Create by Month"
+                        name="create_date_by_month"
+                        context="{'group_by':'create_date', 'default_order': 'create_date asc'}"
+                    />
+                    <filter
+                        string="Create by Week"
+                        name="create_date_by_week"
+                        context="{'group_by':'create_date:week', 'default_order': 'create_date'}"
+                    />
+                    <filter
+                        string="Create by Day"
+                        name="create_date_by_week"
+                        context="{'group_by':'create_date:day', 'default_order': 'create_date'}"
+                    />
+                    <separator />
+                    <filter
+                        string="Checkin by Month"
+                        name="checkin_by_month"
+                        context="{'group_by':'arrival', 'default_order': 'arrival asc'}"
+                    />
+                    <filter
+                        string="Checkin by Week"
+                        name="checkin_by_week"
+                        context="{'group_by':'arrival:week', 'default_order': 'arrival'}"
+                    />
+                    <filter
+                        string="Checkin by Day"
+                        name="checkin_by_week"
+                        context="{'group_by':'arrival:day', 'default_order': 'arrival'}"
+                    />
+                    <separator />
+                    <filter
+                        string="Checkout by Month"
+                        name="checkout_by_month"
+                        context="{'group_by':'departure', 'default_order': 'departure asc'}"
+                    />
+                    <filter
+                        string="Checkout by Week"
+                        name="checkout_by_week"
+                        context="{'group_by':'departure:week', 'default_order': 'departure'}"
+                    />
+                    <filter
+                        string="Checkout by Day"
+                        name="checkout_by_week"
+                        context="{'group_by':'departure:day', 'default_order': 'departure'}"
+                    />
+                    <separator />
+                </group>
             </search>
         </field>
     </record>
