--- a/pms/views/pms_folio_views.xml
+++ b/pms/views/pms_folio_views.xml
@@ -25,6 +25,13 @@
                         string="Set to Done"
                         help="If a Folio is done, you cannot modify it manually anymore. However, you will still be able to invoice. This is used to freeze the Folio."
                     />
+                    <button
+                        name="%(pms.action_view_folio_advance_payment_inv)d"
+                        string="Create Invoice"
+                        type="action"
+                        class="btn-primary"
+                        attrs="{'invisible': [('invoice_status', '!=', 'to invoice')]}"
+                    />
                     <field
                         name="state"
                         select="2"
@@ -35,11 +42,11 @@
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button
-                            type="object"
+                            type="action"
                             class="oe_stat_button"
                             id="payment_smart_button"
                             icon="fa-money"
-                            name="action_pay"
+                            name="%(pms.action_payment_folio)d"
                             attrs="{'invisible': [('pending_amount','&lt;=',0)]}"
                         >
                             <div class="o_form_field o_stat_info">
@@ -82,7 +89,31 @@
                                 widget="percentpie"
                             />
                         </button>
+                        <button
+                            name="action_view_invoice"
+                            type="object"
+                            class="oe_stat_button"
+                            icon="fa-pencil-square-o"
+                            attrs="{'invisible': [('invoice_count', '=', 0)]}"
+                        >
+                            <field
+                                name="invoice_count"
+                                widget="statinfo"
+                                string="Invoices"
+                            />
+                        </button>
                     </div>
+                    <widget
+                        name="web_ribbon"
+                        title="Paid"
+                        attrs="{'invisible': [('payment_state', '!=', 'paid')]}"
+                    />
+                    <widget
+                        name="web_ribbon"
+                        title="Partial"
+                        bg_color="bg-warning"
+                        attrs="{'invisible': [('payment_state', '!=', 'partial')]}"
+                    />
                     <h2>
                         <field name="name" />
                     </h2>
@@ -186,6 +217,7 @@
 
                     </group>
                     <group invisible="1">
+                        <field name="payment_state" invisible="1" force_save="1" />
                         <field name="move_ids" invisible="1" />
                         <field name="invoice_status" invisible="1" />
                         <field name="currency_id" invisible="1" />
@@ -193,6 +225,116 @@
                         <field name="invoices_paid" invisible="1" />
                     </group>
                     <notebook colspan="4" col="1">
+                        <page string="Sale Lines">
+                            <field
+                                name="sale_line_ids"
+                                widget="section_and_note_one2many"
+                            >
+                                <tree string="Sales Lines" editable="bottom">
+                                    <control>
+                                        <create
+                                            name="add_product_control"
+                                            string="Add a product"
+                                        />
+                                        <create
+                                            name="add_section_control"
+                                            string="Add a section"
+                                            context="{'default_display_type': 'line_section'}"
+                                        />
+                                        <create
+                                            name="add_note_control"
+                                            string="Add a note"
+                                            context="{'default_display_type': 'line_note'}"
+                                        />
+                                    </control>
+
+                                    <field name="sequence" widget="handle" />
+                                    <!-- We do not display the type because we don't want the user to be bothered with that information if he has no section or note. -->
+                                    <field name="display_type" invisible="1" />
+
+                                    <!-- <field name="product_updatable" invisible="1"/> -->
+                                    <field
+                                        name="product_id"
+                                        options="{'no_open': True}"
+                                        force_save="1"
+                                    />
+                                    <field
+                                        name="name"
+                                        widget="section_and_note_text"
+                                        optional="show"
+                                    />
+                                    <field
+                                        name="analytic_tag_ids"
+                                        optional="hide"
+                                        groups="analytic.group_analytic_tags"
+                                        widget="many2many_tags"
+                                        options="{'color_field': 'color'}"
+                                        domain="['|', ('company_id', '=', False), ('company_id', '=', parent.company_id)]"
+                                    />
+                                    <field
+                                        name="product_uom_qty"
+                                        decoration-info="(not display_type and invoice_status == 'to invoice')"
+                                        decoration-bf="(not display_type and invoice_status == 'to invoice')"
+                                        context="{
+                                            'partner_id': parent.partner_id,
+                                            'quantity': product_uom_qty,
+                                            'pricelist': parent.pricelist_id,
+                                            'uom': product_uom,
+                                            'company_id': parent.company_id
+                                        }"
+                                    />
+                                    <field
+                                        name="qty_invoiced"
+                                        decoration-info="(not display_type and invoice_status == 'to invoice')"
+                                        decoration-bf="(not display_type and invoice_status == 'to invoice')"
+                                        string="Invoiced"
+                                        attrs="{'column_invisible': [('parent.state', '=', 'draft')]}"
+                                        optional="show"
+                                    />
+                                    <field name="qty_to_invoice" invisible="1" />
+                                    <field name="product_uom_readonly" invisible="1" />
+                                    <field name="reservation_line_ids" invisible="1" />
+                                    <field
+                                        name="product_uom"
+                                        force_save="1"
+                                        string="UoM"
+                                        groups="uom.group_uom"
+                                        options='{"no_open": True}'
+                                        optional="show"
+                                    />
+                                    <field name="price_unit" />
+                                    <field
+                                        name="tax_ids"
+                                        widget="many2many_tags"
+                                        options="{'no_create': True}"
+                                        domain="[('type_tax_use','=','sale'),('company_id','=',parent.company_id)]"
+                                        optional="show"
+                                    />
+                                    <field
+                                        name="discount"
+                                        string="Disc.%"
+                                        groups="product.group_discount_per_so_line"
+                                        optional="show"
+                                        widget="product_discount"
+                                    />
+                                    <field
+                                        name="price_subtotal"
+                                        widget="monetary"
+                                        groups="account.group_show_line_subtotals_tax_excluded"
+                                    />
+                                    <field
+                                        name="price_total"
+                                        widget="monetary"
+                                        groups="account.group_show_line_subtotals_tax_included"
+                                    />
+                                    <field name="state" invisible="0" />
+                                    <field name="invoice_status" invisible="0" />
+                                    <field name="currency_id" invisible="1" />
+                                    <field name="price_tax" invisible="1" />
+                                    <field name="company_id" invisible="1" />
+                                </tree>
+                            </field>
+                        </page>
                         <page string="Reservation Rooms">
                             <field
                                 name="reservation_ids"
@@ -239,24 +381,6 @@
                                 />
                             </group>
                         </page>
-                        <page
-                            name="payments"
-                            string="Payments"
-                            attrs="{'invisible': [('invoices_paid','&lt;=',0)]}"
-                        >
-                            <field
-                                name="payment_ids"
-                                context="{'tree_view_ref':'pms.account_payment_view_tree_folio', 'form_view_ref':'pms.account_payment_view_form_folio'}"
-                                options="{'no_create': True}"
-                            />
-                        </page>
-                        <!-- <page
-                            name="returns"
-                            string="Retun Payments"
-                            attrs="{'invisible': [('refund_amount','&lt;=',0)]}"
-                        >
-                            <field name="return_ids" options="{'no_create': True}" />
-                        </page> -->
                         <page string="Other data" invisible="1">
                             <group>
                                 <field name="user_id" />
